@@ -10,18 +10,19 @@ import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @Testcontainers
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class TarjetaRemoteRepositoryImplTest {
 
     @Container
-    public static PostgreSQLContainer<?> postgreContainer = new PostgreSQLContainer<>("postgres:17-alpine")
+    public static PostgreSQLContainer<?> postgreContainer = new PostgreSQLContainer<>("postgres:12-alpine")
             .withDatabaseName("tarjetas_db")
             .withUsername("admin")
             .withPassword("admin123")
@@ -34,16 +35,15 @@ public class TarjetaRemoteRepositoryImplTest {
     public static void setUp() throws SQLException {
         dataBaseManager = new RemoteDataBaseManager(){
             @Override
-                public Connection getConnection() throws SQLException {
-                    return DriverManager.getConnection(
-                            postgreContainer.getJdbcUrl(),
-                            postgreContainer.getUsername(),
-                            postgreContainer.getPassword()
-                    );
-                }
+            public Connection getConnection() throws SQLException {
+                return DriverManager.getConnection(
+                        postgreContainer.getJdbcUrl(),
+                        postgreContainer.getUsername(),
+                        postgreContainer.getPassword()
+                );
+            }
         };
-
-    tarjetaRemoteRepository = new TarjetaRemoteRepositoryImpl(dataBaseManager);
+        tarjetaRemoteRepository = new TarjetaRemoteRepositoryImpl(dataBaseManager);
     }
 
     @AfterAll
@@ -55,19 +55,19 @@ public class TarjetaRemoteRepositoryImplTest {
 
     @Test
     @Order(1)
-    void getAll() {
-        List<Tarjeta> tarjetaTest = tarjetaRemoteRepository.getAll();
+    void getAll()  {
+        List<Tarjeta> tarjeta =tarjetaRemoteRepository.getAll();
 
         assertAll(() -> {
-            assertNotNull(tarjetaTest);
-            assertFalse(tarjetaTest.isEmpty(), "La lista de tarjetas no debe estar vacía");
-            assertEquals("Ana", tarjetaTest.get(0).getNombreTitular());
+            assertNotNull (tarjeta);
+            assertEquals(2, tarjeta.size());
+            assertEquals("Ana", tarjeta.getFirst().getNombreTitular());
         });
     }
 
     @Test
     @Order(2)
-    public void GetById() {
+    public void getById() {
         var tarjeta = tarjetaRemoteRepository.getById(1L);
 
         assertAll(() -> {
@@ -78,20 +78,20 @@ public class TarjetaRemoteRepositoryImplTest {
 
     @Test
     @Order(3)
-    public void GetByIdNotFound() {
+    public void getByIdNotFound() {
         var tarjeta = tarjetaRemoteRepository.getById(999L);
 
         assertAll(() -> {
-            assertFalse(tarjeta.isPresent());
+            assertTrue(tarjeta.isEmpty());
         });
     }
 
     @Test
     @Order(4)
-    public void Create() {
+    public void create() {
         Tarjeta tarjeta = Tarjeta.builder()
                 .nombreTitular("Juan")
-                .numeroTarjeta("0987654321098765")
+                .numeroTarjeta("098765432123456")
                 .fechaCaducidad(LocalDate.of(2022, 12, 31))
                 .build();
 
@@ -100,35 +100,39 @@ public class TarjetaRemoteRepositoryImplTest {
         assertAll(() -> {
             assertNotNull(tarjetaCreada);
             assertEquals("Juan", tarjetaCreada.getNombreTitular());
+            assertEquals("098765432123456", tarjetaCreada.getNumeroTarjeta());
+            assertEquals(LocalDate.of(2022, 12, 31), tarjetaCreada.getFechaCaducidad());
         });
     }
 
     @Test
     @Order(5)
-    public void Update() {
+    public void update() {
         Tarjeta tarjeta = Tarjeta.builder()
                 .id(1L)
-                .nombreTitular("Ana Updated")
+                .nombreTitular("Ana Actualizada")
                 .numeroTarjeta("1234567890123456")
-                .fechaCaducidad(LocalDate.of(2022, 12, 31))
+                .fechaCaducidad(LocalDate.of(2025, 1, 1))
                 .build();
 
         var tarjetaActualizada = tarjetaRemoteRepository.update(1L, tarjeta);
 
         assertAll(() -> {
             assertNotNull(tarjetaActualizada);
-            assertEquals("Ana Updated", tarjetaActualizada.getNombreTitular());
+            assertEquals("Ana Actualizada", tarjetaActualizada.getNombreTitular());
         });
     }
 
     @Test
     @Order(6)
-    public void UpdateNotFound() {
+    public void updateNotFound() {
         Tarjeta tarjeta = Tarjeta.builder()
                 .id(999L)
-                .nombreTitular("Ana Updated")
+                .nombreTitular("Ana Actualizada")
                 .numeroTarjeta("1234567890123456")
                 .fechaCaducidad(LocalDate.of(2022, 12, 31))
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
 
         var tarjetaActualizada = tarjetaRemoteRepository.update(999L, tarjeta);
@@ -140,11 +144,21 @@ public class TarjetaRemoteRepositoryImplTest {
 
     @Test
     @Order(7)
-    public void Delete() {
-        var tarjetaEliminada = tarjetaRemoteRepository.delete(99L);
+    public void delete() {
+        var tarjeta= tarjetaRemoteRepository.delete(1L);
 
         assertAll(() -> {
-            assertFalse(tarjetaEliminada, "La tarjeta no debería existir");
+            assertTrue(tarjeta);
+        });
+    }
+
+    @Test
+    @Order(8)
+    public void deleteNotFound() {
+        var tarjeta= tarjetaRemoteRepository.delete(100L);
+
+        assertAll(() -> {
+            assertFalse(tarjeta);
         });
     }
 }
